--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "dependencies": {
     "axios": "^1.4.0",
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mssql": "^9.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
