--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.4.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "mssql": "^9.1.1"
+    "mssql": "^9.1.1",
+    "winston": "^3.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
